[package]
name = "memberlist-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
memberlist = "0.7.0"
async-trait = "0.1"
nodecraft = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
smol_str = "0.3"
indexmap = "2.0"
bincode = "1.3"
